hopefully this fixes mobile layout issue

--- a/public/style.css
+++ b/public/style.css
@@ -222,7 +222,7 @@ main {
     position: relative;
     display: flex;
     width: 100%;
-    height: 100%;
+    flex-grow: 1;
     overflow: hidden;
 }
 
